<resources>
    <string name="app_name">HW3.2.CalculatorActions</string>
    <string name="btn_c">C</string>
    <string name="btn_sign">+/-</string>
    <string name="btn_percent">%</string>
    <string name="btn_divide">/</string>
    <string name="btn_multiply">x</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
    <string name="btn_equal">=</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_zero">0</string>
    <string name="btn_point">.</string>
    <string name="txt_o">O</string>
    <string name="txt_h">H</string>
    <string name="txt_a">A</string>
    <string name="txt_p">P</string>
    <string name="txt_k">K</string>
    <string name="txt_i">I</string>
    <string name="txt_n">N</string>
    <string name="error_point_already_exist">Точка уже существует</string>
</resources>
